--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,7 +18,7 @@ body {
 :root {
   --primary-bg-color: #740200;
   --secondary-bg-color: #E90101;
-  --tertiary-bg-color: #E70001 
+  --tertiary-bg-color: #E70001;
 }
 
 
